--- a/BackboneDemo/BackboneDemo.csproj
+++ b/BackboneDemo/BackboneDemo.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Extensions\ObjectExtensions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
