--- a/BackboneDemo/BackboneDemo.csproj
+++ b/BackboneDemo/BackboneDemo.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attribute\NoCache.cs" />
     <Compile Include="Controllers\DemoController.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
